# typesetter-game

./: #include <stdio.h>  CMakeLists.txt  README.md
typesetter/: main.c
typesetter.xcodeproj/: project.pbxproj
typesetter.xcodeproj/project.xcworkspace/xcuserdata/dmitry.xcuserdatad/: UserInterfaceState.xcuserstate
typesetter.xcodeproj/xcuserdata/dmitry.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
typesetter.xcodeproj/xcuserdata/dmitry.xcuserdatad/xcschemes/: xcschememanagement.plist
versions/: 1.0.1  1.0.2  1.1  1.4 comments  1.4debug
versions/Архив/: Подсчет символов в файле
